feat: implement keyboard creation via js

--- a/index.html
+++ b/index.html
@@ -11,93 +11,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" type="image/svg+xml" href="./images/favicon.svg" />
 </head>
 
 <body>
-  <main class="main">
-    <h1>RSS Virtual Keyboard</h1>
-    <textarea name="text" class="output" cols="30" rows="10"></textarea>
-    <section class="keyboard">
-      <div class="key-row">
-        <div class="key">`</div>
-        <div class="key">1</div>
-        <div class="key">2</div>
-        <div class="key">3</div>
-        <div class="key">4</div>
-        <div class="key">5</div>
-        <div class="key">6</div>
-        <div class="key">7</div>
-        <div class="key">8</div>
-        <div class="key">9</div>
-        <div class="key">0</div>
-        <div class="key">-</div>
-        <div class="key">=</div>
-        <div class="key key_emphasized key_size_bigger">Backspace</div>
-      </div>
-      <div class="key-row">
-        <div class="key key_emphasized key_size_big">Tab</div>
-        <div class="key">q</div>
-        <div class="key">w</div>
-        <div class="key">e</div>
-        <div class="key">r</div>
-        <div class="key">t</div>
-        <div class="key">y</div>
-        <div class="key">u</div>
-        <div class="key">i</div>
-        <div class="key">o</div>
-        <div class="key">p</div>
-        <div class="key">[</div>
-        <div class="key">]</div>
-        <div class="key">\</div>
-        <div class="key key_emphasized">Del</div>
-      </div>
-      <div class="key-row">
-        <div class="key key_emphasized key_size_bigger">CapsLock</div>
-        <div class="key">a</div>
-        <div class="key">s</div>
-        <div class="key">d</div>
-        <div class="key">f</div>
-        <div class="key">g</div>
-        <div class="key">h</div>
-        <div class="key">j</div>
-        <div class="key">k</div>
-        <div class="key key_active">l</div>
-        <div class="key">;</div>
-        <div class="key">'</div>
-        <div class="key key_emphasized key_emphasized key_size_bigger">Enter</div>
-      </div>
-      <div class="key-row">
-        <div class="key key_emphasized key_size_bigger">Shift</div>
-        <div class="key">z</div>
-        <div class="key">x</div>
-        <div class="key">c</div>
-        <div class="key">v</div>
-        <div class="key">b</div>
-        <div class="key">n</div>
-        <div class="key">m</div>
-        <div class="key">,</div>
-        <div class="key">.</div>
-        <div class="key">/</div>
-        <div class="key key_emphasized">↑</div>
-        <div class="key key_emphasized key_size_bigger">Shift</div>
-      </div>
-      <div class="key-row">
-        <div class="key key_emphasized key_size_big">Ctrl</div>
-        <div class="key key_emphasized">Win</div>
-        <div class="key key_emphasized">Alt</div>
-        <div class="key key_size_space"> </div>
-        <div class="key key_emphasized">Alt</div>
-        <div class="key key_emphasized">←</div>
-        <div class="key key_emphasized">↓</div>
-        <div class="key key_emphasized">→</div>
-        <div class="key key_emphasized key_size_big">Ctrl</div>
-      </div>
-    </section>
-    <footer>
-      <p>Клавиатура создана в операционной системе Windows</p>
-      <p>Для переключения языка комбинация: левыe ctrl + alt</p>
-    </footer>
-  </main>
+
+    <script src="index.js" type="module"></script>
 </body>
 
 </html>
